# berserk-CLI

./: LICENSE  README.md  pyproject.toml
src/berserk-CLI/: main.py
src/berserk_CLI.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
